2007-11-16  Philip Van Hoof  <pvanhoof@gnome.org>

	* Bugfix in TnyGtkFolderStoreTreeModel: the signals where not being
	disconnected when the instance finalised.
	* Disconnecting signals
	* Cache deleter must also unreference the service instance

2007-11-15  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(tny_maemo_conic_device_connect):
	(tny_maemo_conic_device_connect_async): added a new parametter called
	user_requested that specifies whether or not the connection was
	requested by an user or by an automatic system (like a daemon). This
	allows the connection not to succed when the device is sleeping.

2007-11-15  Philip Van Hoof  <pvanhoof@gnome.org>

	* Updating attachment flags after downloading of message
	* Bugfix, bug detected by Milan Crha (alloc must be a alloc0)
	* Fixed a crasher

2007-11-15  Matthew Barnes  <mbarnes@redhat.com>

	* Mark a bunch exception messages for translation.
	* A few new argument guards here and there (e.g. g_return_if_fail).
	* Tons of little whitespace and coding style fixes.

2007-11-14  Philip Van Hoof  <pvanhoof@gnome.org>

	* Changed a hard reference into a weak reference, although I'm not
	sure that this was necessary.
	* Fixed two bugs: first that for transport-account the
	tny_camel_account_set_online's callback was never called for, second
	that the TnyCamelSendQueue was making TnyCamelFolder crash since
	yesterday's reference count fixes

2007-11-13  Philip Van Hoof  <pvanhoof@gnome.org>

	* Weak references for TnyHeader instances in TnyCamelMsgHeader
	* Reference counting mistakes in TnyGtkFolderStoreTreeModel
	* Reference counting mistakes in TnyGtkAccountListModel

2007-11-12  Vivek Sekar  <viveksekar@gmail.com>

	* Renamed the control files with respect to the new maemo versions.

2007-11-09  Philip Van Hoof  <pvanhoof@gnome.org>

	* Tryout lockup fix

2007-11-09  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-maemo/tny-maemo-conic-device.c: 